--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "base64-img": "^1.0.4",
     "classnames": "^2.2.6",
+    "fs": "0.0.1-security",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
