--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
