--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "base64-img": "^1.0.4",
     "classnames": "^2.2.6",
     "fs": "0.0.1-security",
+    "is-image-url": "^1.1.8",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
