--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-notification-badge": "^1.5.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
