--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
+    "is-image-url": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.0",
     "passport": "^0.4.0",
